Added updateCatcher endpoint
